# os-notif-telegram

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/os_notif_telegram/: cli.py  config.py  forwarder.py  tray.py
